--- a/packages/twenty-zapier/package.json
+++ b/packages/twenty-zapier/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
+    "twenty-zapier": "file:",
     "zapier-platform-core": "15.5.1"
   },
   "devDependencies": {
